fixed fun in the sun on mobile design

--- a/css/index.css
+++ b/css/index.css
@@ -316,6 +316,7 @@ header .header nav a {
 @media (max-width: 500px) {
   .home .content-pick {
     flex-direction: column;
+    align-items: center;
   }
 }
 .home .content-pick .destination {
@@ -324,7 +325,7 @@ header .header nav a {
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
-    width: 100%;
+    width: 80%;
   }
 }
 @media (max-width: 500px) {
