--- a/less/home-page.less
+++ b/less/home-page.less
@@ -95,6 +95,7 @@
 
     @media @mobile {
       flex-direction: column;
+      align-items: center;
     }
 
     .destination {
@@ -102,7 +103,7 @@
       margin-bottom: 30px;
 
       @media @mobile {
-        width: 100%;
+        width: 80%;
       }
     }
   }
